--- a/generators/templates/stories.tsx.hbs
+++ b/generators/templates/stories.tsx.hbs
@@ -6,4 +6,4 @@ export default {
   component: {{pascalCase name}},
 } as Meta
 
-export const Basic: Story = (args) => <{{pascalCase name}} />
+export const Default: Story = (args) => <{{pascalCase name}} />
